--- a/NewMavenProject/test-output/old/Default suite/methods.html
+++ b/NewMavenProject/test-output/old/Default suite/methods.html
@@ -1,22 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e8896b">  <td>24/05/28 22:01:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Parameter.aftermethod()[pri:0, instance:basics.Parameter@2c35e847]">&lt;&lt;aftermethod</td> 
-<td>&nbsp;</td>  <td>main@1250442005</td>   <td></td> </tr>
-<tr bgcolor="e8896b">  <td>24/05/28 22:01:20</td>   <td>159</td> <td title="&lt;&lt;Parameter.aftrsuite()[pri:0, instance:basics.Parameter@2c35e847]">&lt;&lt;aftrsuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1250442005</td>   <td></td> </tr>
-<tr bgcolor="e8896b">  <td>24/05/28 22:01:20</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Parameter.afterclass()[pri:0, instance:basics.Parameter@2c35e847]">&lt;&lt;afterclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1250442005</td>   <td></td> </tr>
-<tr bgcolor="e8896b">  <td>24/05/28 22:01:20</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Parameter.beforemethod()[pri:0, instance:basics.Parameter@2c35e847]">&gt;&gt;beforemethod</td> 
-<td>&nbsp;</td>  <td>main@1250442005</td>   <td></td> </tr>
-<tr bgcolor="e8896b">  <td>24/05/28 22:01:20</td>   <td>-43</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Parameter.beforeclass()[pri:0, instance:basics.Parameter@2c35e847]">&gt;&gt;beforeclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1250442005</td>   <td></td> </tr>
-<tr bgcolor="e8896b">  <td>24/05/28 22:01:20</td>   <td>-65</td> <td>&nbsp;</td><td title="&gt;&gt;Parameter.beforetest()[pri:0, instance:basics.Parameter@2c35e847]">&gt;&gt;beforetest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1250442005</td>   <td></td> </tr>
-<tr bgcolor="e8896b">  <td>24/05/28 22:01:20</td>   <td>6</td> <td>&nbsp;</td><td title="&lt;&lt;Parameter.aftertest()[pri:0, instance:basics.Parameter@2c35e847]">&lt;&lt;aftertest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1250442005</td>   <td></td> </tr>
-<tr bgcolor="e8896b">  <td>24/05/28 22:01:20</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Parameter.mymethodtwo()[pri:0, instance:basics.Parameter@2c35e847]">mymethodtwo</td> 
-  <td>main@1250442005</td>   <td></td> </tr>
-<tr bgcolor="e8896b">  <td>24/05/28 22:01:20</td>   <td>-70</td> <td title="&gt;&gt;Parameter.beforesuite()[pri:0, instance:basics.Parameter@2c35e847]">&gt;&gt;beforesuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1250442005</td>   <td></td> </tr>
+<tr bgcolor="e8896b">  <td>24/06/02 01:14:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Dependents.mymethodone()[pri:0, instance:testngbasics.Dependents@7c24b813]">mymethodone</td> 
+  <td>main@1400856767</td>   <td></td> </tr>
+<tr bgcolor="e8896b">  <td>24/06/02 01:14:39</td>   <td>21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Dependents.beforemethod()[pri:0, instance:testngbasics.Dependents@7c24b813]">&gt;&gt;beforemethod</td> 
+<td>&nbsp;</td>  <td>main@1400856767</td>   <td></td> </tr>
+<tr bgcolor="e8896b">  <td>24/06/02 01:14:39</td>   <td>25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Dependents.aftermethod()[pri:0, instance:testngbasics.Dependents@7c24b813]">&lt;&lt;aftermethod</td> 
+<td>&nbsp;</td>  <td>main@1400856767</td>   <td></td> </tr>
+<tr bgcolor="e8896b">  <td>24/06/02 01:14:39</td>   <td>-35</td> <td>&nbsp;</td><td title="&gt;&gt;Dependents.beforetest()[pri:0, instance:testngbasics.Dependents@7c24b813]">&gt;&gt;beforetest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1400856767</td>   <td></td> </tr>
+<tr bgcolor="e8896b">  <td>24/06/02 01:14:39</td>   <td>27</td> <td>&nbsp;</td><td title="&lt;&lt;Dependents.aftertest()[pri:0, instance:testngbasics.Dependents@7c24b813]">&lt;&lt;aftertest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1400856767</td>   <td></td> </tr>
+<tr bgcolor="e8896b">  <td>24/06/02 01:14:40</td>   <td>119</td> <td title="&lt;&lt;Dependents.aftrsuite()[pri:0, instance:testngbasics.Dependents@7c24b813]">&lt;&lt;aftrsuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1400856767</td>   <td></td> </tr>
+<tr bgcolor="e8896b">  <td>24/06/02 01:14:39</td>   <td>21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Dependents.beforemethod()[pri:0, instance:testngbasics.Dependents@7c24b813]">&gt;&gt;beforemethod</td> 
+<td>&nbsp;</td>  <td>main@1400856767</td>   <td></td> </tr>
+<tr bgcolor="e8896b">  <td>24/06/02 01:14:39</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Dependents.afterclass()[pri:0, instance:testngbasics.Dependents@7c24b813]">&lt;&lt;afterclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1400856767</td>   <td></td> </tr>
+<tr bgcolor="e8896b">  <td>24/06/02 01:14:39</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Dependents.mymethodtwo()[pri:0, instance:testngbasics.Dependents@7c24b813]">mymethodtwo</td> 
+  <td>main@1400856767</td>   <td></td> </tr>
+<tr bgcolor="e8896b">  <td>24/06/02 01:14:39</td>   <td>-38</td> <td title="&gt;&gt;Dependents.beforesuite()[pri:0, instance:testngbasics.Dependents@7c24b813]">&gt;&gt;beforesuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1400856767</td>   <td></td> </tr>
+<tr bgcolor="e8896b">  <td>24/06/02 01:14:39</td>   <td>25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Dependents.aftermethod()[pri:0, instance:testngbasics.Dependents@7c24b813]">&lt;&lt;aftermethod</td> 
+<td>&nbsp;</td>  <td>main@1400856767</td>   <td></td> </tr>
+<tr bgcolor="e8896b">  <td>24/06/02 01:14:39</td>   <td>25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Dependents.aftermethod()[pri:0, instance:testngbasics.Dependents@7c24b813]">&lt;&lt;aftermethod</td> 
+<td>&nbsp;</td>  <td>main@1400856767</td>   <td></td> </tr>
+<tr bgcolor="e8896b">  <td>24/06/02 01:14:39</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Dependents.beforeclass()[pri:0, instance:testngbasics.Dependents@7c24b813]">&gt;&gt;beforeclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1400856767</td>   <td></td> </tr>
+<tr bgcolor="e8896b">  <td>24/06/02 01:14:39</td>   <td>21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Dependents.mymethodthree()[pri:0, instance:testngbasics.Dependents@7c24b813]">mymethodthree</td> 
+  <td>main@1400856767</td>   <td></td> </tr>
+<tr bgcolor="e8896b">  <td>24/06/02 01:14:39</td>   <td>21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Dependents.beforemethod()[pri:0, instance:testngbasics.Dependents@7c24b813]">&gt;&gt;beforemethod</td> 
+<td>&nbsp;</td>  <td>main@1400856767</td>   <td></td> </tr>
 </table>
