INITIAL COMMIT REST OF CODE

--- a/Facebook_Page_Object_Model/test-output/old/Default suite/methods-alphabetical.html
+++ b/Facebook_Page_Object_Model/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b2768b">  <td>24/06/29 13:36:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:facebookpagelogintest.LoginTest@4b3c354a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1649847375</td>   <td></td> </tr>
-<tr bgcolor="b2768b">  <td>24/06/29 13:37:06</td>   <td>35658</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:facebookpagelogintest.LoginTest@4b3c354a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1649847375</td>   <td></td> </tr>
-<tr bgcolor="b2768b">  <td>24/06/29 13:36:43</td>   <td>13014</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLoginWithScreenshots()[pri:0, instance:facebookpagelogintest.LoginTest@4b3c354a]">testLoginWithScreenshots</td> 
-  <td>main@1649847375</td>   <td></td> </tr>
+<tr bgcolor="b6d4d4">  <td>24/07/13 11:29:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:facebookpagelogintest.LoginTest@c1bd0be]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1433208870</td>   <td></td> </tr>
+<tr bgcolor="b6d4d4">  <td>24/07/13 11:29:56</td>   <td>34173</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:facebookpagelogintest.LoginTest@c1bd0be]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1433208870</td>   <td></td> </tr>
+<tr bgcolor="b6d4d4">  <td>24/07/13 11:29:36</td>   <td>14170</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLoginWithScreenshots()[pri:0, instance:facebookpagelogintest.LoginTest@c1bd0be]">testLoginWithScreenshots</td> 
+  <td>main@1433208870</td>   <td></td> </tr>
 </table>
